--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" id="item_name" name="item_name" autofocus>
         <label for="quantity">Quantity</label>
         <input type="number" id="quantity" name="quantity">
-        <input type="submit" value="ADD">
+        <input type="submit" value="Add">
       </fieldset>
     </form>
     <h1>Groceries</h1>
